--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="message" type="id">message</item>
+    <item name="hello_darkness" type="id">textReceiveMessage</item>
+    <item name="hello_darkness_message" type="id">message</item>
 </resources>
